--- a/Activity1/story2.html
+++ b/Activity1/story2.html
@@ -7,12 +7,7 @@
 <body>
 <h1> Steph's News Website </h1>
 <hr>
-<ul>
-    <li><a href="story1.html">Story 1</a></li>
-    <li><a href="story2.html">Story 2</a></li>
-</ul>
-
-
-
+<h2> STORY 2!</h2>
+<p><a href="main.html">Return to the main page</a></p>
 </body>
 </html>
